# TBook

./: .gitignore  .mcp.json  chunks.json  embeddings.json  jest.config.js  pyproject.toml  requirements.txt  tsconfig.json  vercel.json
.claude/: settings.local.json
.gemini/: settings.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
Textbook/: .gitignore  .markdownlint.json  .textlintrc.json  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  vercel.json
Textbook/src/: config.ts
auth-server/: package.json  test-csrf-fix.js  test-db.js
auth-server/src/: auth.ts  index.ts
backend/: README.md  README.md.hf  agent_client.py  debug_db.py  debug_db_schema.py  debug_server.py  main.py  requirements.txt  schemas.py  start_server.py  test_connection.py  test_server.py  validate_implementation.py
backend/docs/: API.md
backend/routers/: chat.py  profile.py
backend/scripts/: init_db.py  run_migrations.py
backend/tests/: test_contract_chat.py  test_contract_errors.py  test_contract_stream.py  test_integration_chat.py  test_integration_errors.py  test_integration_stream.py
backend/utils/: auth.py  database.py  error_handlers.py  logging.py
docs/: database-setup.md
scripts/: extract_book_chunks.py  generate_embeddings.py  list_gemini_models.py  models.py  push_to_qdrant.py  qdrant_utils.py  rag_agent.py  setup_db.py  setup_qdrant.py  test_db_operations.py  test_rag_agent.py  test_us2.py  test_us3.py  test_us4.py  utils.py  validate-chapter-structure.js
specs/001-ch8-launch-params/: plan.md  (+5 more)
(+431 files in other folders)
